Sugati/src/objects/Activity__c.object
<CustomObject>
    <fields>
        <fullName>WH_Archive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Archive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WH_Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Category</label>
        <referenceTo>Category__c</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>WH_Continent__c</fullName>
        <formula>WH_Country__r.C_Continent__r.Name</formula>
        <label>Continent</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WH_Country__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Country</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipName>What_to_do</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>WH_Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>WH_Duration__c</fullName>
        <inlineHelpText>In Day&apos;s</inlineHelpText>
        <label>Duration</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WH_Estimated_Cost__c</fullName>
        <inlineHelpText>In ORG currency</inlineHelpText>
        <label>Estimated Cost</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>WH_Exec_Code__c</fullName>
        <label>Exec Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WH_Holiday_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Holiday Type</label>
        <referenceTo>Holiday_Type__c</referenceTo>
        <relationshipName>What_to_do</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>WH_Interest__c</fullName>
        <label>Interest</label>
        <picklist>
            <picklistValues>
                <fullName>Fine Dinning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diving</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Culture</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>WH_Rating__c</fullName>
        <label>Rating</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>WH_When__c</fullName>
        <label>When</label>
        <picklist>
            <picklistValues>
                <fullName>January</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>February</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>March</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>April</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>May</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>June</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>July</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>August</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>September</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>October</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>November</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>December</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>WH_Where_to_go__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Where to go</label>
        <referenceTo>Where_to_go__c</referenceTo>
        <relationshipName>What_to_do</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Activity</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>WH_Where_to_go__c</columns>
        <columns>WH_Country__c</columns>
        <columns>WH_Continent__c</columns>
        <columns>WH_Interest__c</columns>
        <columns>WH_When__c</columns>
        <columns>WH_Holiday_Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Whattodo</fullName>
        <columns>NAME</columns>
        <columns>WH_Where_to_go__c</columns>
        <columns>WH_Country__c</columns>
        <columns>WH_Holiday_Type__c</columns>
        <columns>WH_Interest__c</columns>
        <columns>WH_When__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>WH_Country__c</field>
            <operation>equals</operation>
            <value>Albania</value>
        </filters>
        <label>Albania</label>
    </listViews>
    <listViews>
        <fullName>Whattodo1</fullName>
        <columns>NAME</columns>
        <columns>WH_Where_to_go__c</columns>
        <columns>WH_Country__c</columns>
        <columns>WH_Holiday_Type__c</columns>
        <columns>WH_Interest__c</columns>
        <columns>WH_When__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>WH_Country__c</field>
            <operation>equals</operation>
            <value>Anguilla</value>
        </filters>
        <label>Anguilla</label>
    </listViews>
    <listViews>
        <fullName>Whattodo10</fullName>
        <columns>NAME</columns>
        <columns>WH_Where_to_go__c</columns>
        <columns>WH_Country__c</columns>
        <columns>WH_Holiday_Type__c</columns>
        <columns>WH_Interest__c</columns>
        <columns>WH_When__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>WH_Country__c</field>
            <operation>equals</operation>
            <value>Bolivia</value>
        </filters>
        <label>Bolivia</label>
    </listViews>
    <listViews>
        <fullName>Whattodo100</fullName>
        <columns>NAME</columns>
        <columns>WH_Where_to_go__c</columns>
        <columns>WH_Country__c</columns>
        <columns>WH_Holiday_Type__c</columns>
        <columns>WH_Interest__c</columns>
        <columns>WH_When__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>WH_Country__c</field>
            <operation>equals</operation>
            <value>Vietnam</value>
        </filters>
        <label>Vietnam</label>
    </listViews>
    <listViews>
        <fullName>Whattodo102</fullName>
        <columns>NAME</columns>
        <columns>WH_Where_to_go__c</columns>
        <columns>WH_Country__c</columns>
        <columns>WH_Holiday_Type__c</columns>
        <columns>WH_Interest__c</columns>
        <columns>WH_When__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>WH_Country__c</field>
            <operation>equals</operation>
            <value>Zambia</value>
        </filters>
        <label>Zambia</label>
    </listViews>
    <listViews>
        <fullName>Whattodo103</fullName>
        <columns>NAME</columns>
        <columns>WH_Where_to_go__c</columns>
        <columns>WH_Country__c</columns>
        <columns>WH_Holiday_Type__c</columns>
        <columns>WH_Interest__c</columns>
        <columns>WH_When__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>WH_Country__c</field>
            <operation>equals</operation>
            <value>Zimbabwe</value>
        </filters>
        <label>Zimbabwe</label>
    </listViews>
    <listViews>
        <fullName>Whattodo11</fullName>
        <columns>NAME</columns>
        <columns>WH_Where_to_go__c</columns>
        <columns>WH_Country__c</columns>
        <columns>WH_Holiday_Type__c</columns>
        <columns>WH_Interest__c</columns>
        <columns>WH_When__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>WH_Country__c</field>
            <operation>equals</operation>
            <value>Botswana</value>
        </filters>
        <label>Botswana</label>
    </listViews>
    <listViews>
        <fullName>Whattodo12</fullName>
        <columns>NAME</columns>
        <columns>WH_Where_to_go__c</columns>
        <columns>WH_Country__c</columns>
        <columns>WH_Holiday_Type__c</columns>
        <columns>WH_Interest__c</columns>
        <columns>WH_When__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>WH_Country__c</field>
            <operation>equals</operation>
            <value>Brazil</value>
        </filters>
        <label>Brazil</label>
    </listViews>
    <listViews>
        <fullName>Whattodo13</fullName>
        <columns>NAME</columns>
        <columns>WH_Where_to_go__c</columns>
        <columns>WH_Country__c</columns>
        <columns>WH_Holiday_Type__c</columns>
        <columns>WH_Interest__c</columns>
        <columns>WH_When__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>WH_Country__c</field>
            <operation>equals</operation>
            <value>British Virgin Islands</value>
        </filters>
        <label>British Virgin Islands</label>
    </listViews>
    <listViews>
        <fullName>Whattodo14</fullName>
        <columns>NAME</columns>
        <columns>WH_Where_to_go__c</columns>
        <columns>WH_Country__c</columns>
        <columns>WH_Holiday_Type__c</columns>
        <columns>WH_Interest__c</columns>
        <columns>WH_When__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>WH_Country__c</field>
            <operation>equals</operation>
            <value>Burma</value>
        </filters>
        <label>Burma</label>
    </listViews>
    <listViews>
        <fullName>Whattodo15</fullName>
        <columns>NAME</columns>
        <columns>WH_Where_to_go__c</columns>
        <columns>WH_Country__c</columns>
        <columns>WH_Holiday_Type__c</columns>
        <columns>WH_Interest__c</columns>
        <columns>WH_When__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>WH_Country__c</field>
            <operation>equals</operation>
            <value>Cambodia</value>
        </filters>
        <label>Cambodia</label>
    </listViews>
    <listViews>
        <fullName>Whattodo16</fullName>
        <columns>NAME</columns>
        <columns>WH_Where_to_go__c</columns>
        <columns>WH_Country__c</columns>
        <columns>WH_Holiday_Type__c</columns>
        <columns>WH_Interest__c</columns>
        <columns>WH_When__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>WH_Country__c</field>
            <operation>equals</operation>
            <value>Canada</value>
        </filters>
        <label>Canada</label>
    </listViews>
    <listViews>
        <fullName>Whattodo17</fullName>
        <columns>NAME</columns>
        <columns>WH_Where_to_go__c</columns>
        <columns>WH_Country__c</columns>
        <columns>WH_Holiday_Type__c</columns>
        <columns>WH_Interest__c</columns>
        <columns>WH_When__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>WH_Country__c</field>
            <operation>equals</operation>
            <value>Chile</value>
        </filters>
        <label>Chile</label>
    </listViews>
    <listViews>
        <fullName>Whattodo18</fullName>
        <columns>NAME</columns>
        <columns>WH_Where_to_go__c</columns>
        <columns>WH_Country__c</columns>
        <columns>WH_Holiday_Type__c</columns>
        <columns>WH_Interest__c</columns>
        <columns>WH_When__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>WH_Country__c</field>
            <operation>equals</operation>
            <value>China</value>
        </filters>
        <label>China</label>
    </listViews>
    <nameField>
        <label>What to do Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Activities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>